--- a/home/index.html
+++ b/home/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="../main.js" onload="generateBoilerPlate('index')"></script>
+    <script defer src="../main.js" onload="generateBoilerPlate('index')"></script>
 </head>
 
 <body onload="generateNavigationBar('index')">
