--- a/how to/skills.html
+++ b/how to/skills.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Skills</title>
+    <script defer src="../main.js" onload="generateBoilerPlate('skills')"></script>
 </head>
 
-<body>
-    <main>
+<body onload="generateNavigationBar('skills')">
 
-    </main>
 </body>
 
 </html>
