--- a/nyc/spots.html
+++ b/nyc/spots.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NYC</title>
+    <script defer src="../main.js" onload="generateBoilerPlate('spots')"></script>
 </head>
 
-<body>
-    <main>
+<body onload="generateNavigationBar('spots')">
 
-    </main>
 </body>
 
 </html>
