first form test

--- a/app/skills.html
+++ b/app/skills.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="scripts/template.js" onload="generateBoilerPlate('skills')"></script>
+    <script defer src="scripts/template.js"></script>
+    <title>Skills</title>
+    <link rel= "stylesheet" href="styles/style.css">
 </head>
         
-<body onload="generateNavigationBar('skills')">
+<body onload="generateTemplate('skills')">
         
 </body>
 
