--- a/app/favorite.html
+++ b/app/favorite.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="scripts/template.js" onload="generateBoilerPlate('favorite')"></script>
+    <script defer src="scripts/template.js"></script>
+    <title>Favorites</title>
+    <link rel= "stylesheet" href="styles/style.css">
 </head>
-
-<body onload="generateNavigationBar('favorite')">
-
+        
+<body onload="generateTemplate('favorite')">
+        
 </body>
 
 </html>
