--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="scripts/template.js" onload="generateBoilerPlate('index')"></script>
+    <script defer src="scripts/template.js"></script>
+    <title>Main Page</title>
+    <link rel= "stylesheet" href="styles/style.css">
 </head>
         
-<body onload="generateNavigationBar('index')">
+<body onload="generateTemplate('index')">
         
 </body>
 
