--- a/app/spots.html
+++ b/app/spots.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="scripts/template.js" onload="generateBoilerPlate('spots')"></script>
+    <script defer src="scripts/template.js"></script>
+    <title>NYC</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-        
-<body onload="generateNavigationBar('spots')">
-        
+
+<body onload="generateTemplate('spots')">
+
 </body>
 
 </html>
